<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.juniet.ndx.MainActivity">

    <TextView
        android:id="@+id/rollResults"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="bottom"
        android:inputType="none"
        android:isScrollContainer="true"
        android:scrollbars="vertical"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonD4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:hint="@string/dice_4"
                android:onClick="rollStandard"
                android:text="@string/dice_4"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/buttonD6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:hint="@string/dice_6"
                android:onClick="rollStandard"
                android:text="@string/dice_6"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/buttonD8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:hint="@string/dice_8"
                android:onClick="rollStandard"
                android:text="@string/dice_8"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/buttonD10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:hint="@string/dice_10"
                android:onClick="rollStandard"
                android:text="@string/dice_10"
                android:textAllCaps="false" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonD12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:hint="@string/dice_12"
                android:onClick="rollStandard"
                android:text="@string/dice_12"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/buttonD20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:hint="@string/dice_20"
                android:onClick="rollStandard"
                android:text="@string/dice_20"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/buttonD100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:hint="@string/dice_100"
                android:onClick="rollStandard"
                android:text="@string/dice_100"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/buttonDF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:hint="@string/dice_f"
                android:onClick="rollStandard"
                android:text="@string/dice_f"
                android:textAllCaps="false" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonCustom1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:hint="1d4"
                android:onClick="rollCustom"
                android:text="@string/dice_custom1"
                android:textSize="12sp" />

            <Button
                android:id="@+id/buttonCustom2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:hint="1d6"
                android:onClick="rollCustom"
                android:text="@string/dice_custom2"
                android:textSize="12sp" />

            <Button
                android:id="@+id/buttonCustom3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:hint="1d8"
                android:onClick="rollCustom"
                android:text="@string/dice_custom3"
                android:textSize="12sp" />

            <Button
                android:id="@+id/buttonCustom4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:hint="1d10"
                android:onClick="rollCustom"
                android:text="@string/dice_custom4"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonCustom5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:hint="1d12"
                android:onClick="rollCustom"
                android:text="@string/dice_custom5"
                android:textSize="12sp" />

            <Button
                android:id="@+id/buttonCustom6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:hint="1d20"
                android:onClick="rollCustom"
                android:text="@string/dice_custom6"
                android:textSize="12sp" />

            <Button
                android:id="@+id/buttonCustom7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:hint="1d100"
                android:onClick="rollCustom"
                android:text="@string/dice_custom7"
                android:textSize="12sp" />

            <Button
                android:id="@+id/buttonCustom8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:hint="1df"
                android:onClick="rollCustom"
                android:text="@string/dice_custom8"
                android:textSize="12sp" />

        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>
